[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprites/enemyBlack1.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 22.2951
height = 6.66472

[node name="Enemy" type="Node2D" groups=[
"enemies",
]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Collider" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collider"]
shape = SubResource( 1 )

[node name="FireTimer" type="Timer" parent="."]
one_shot = true

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 0.5
[connection signal="collided_with_edge" from="." to="." method="_on_Enemy_collided_with_edge"]
[connection signal="area_entered" from="Collider" to="." method="_on_Enemy_area_entered"]
[connection signal="body_entered" from="Collider" to="." method="_on_Enemy_body_entered"]
[connection signal="timeout" from="FireTimer" to="." method="_on_FireTimer_timeout"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]
